# EmployeeAbsence

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: absence.h  employee.h  employeeRepository.h  loadAndSendFiles.h
inputs/: input.csv
outputs/: output.csv
src/: absence.cpp  employee.cpp  employeeRepository.cpp  loadAndSendFiles.cpp
tests/: CMakeLists.txt  employeeTest.cpp
